--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/spectre.css/dist/spectre.min.css",
+              "node_modules/spectre.css/dist/spectre-exp.min.css",
+              "node_modules/spectre.css/dist/spectre-icons.min.css",
               "src/styles.scss"
             ],
             "scripts": []
