--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "interval-timer": "^1.1.2",
     "rxjs": "~6.4.0",
+    "spectre.css": "^0.5.9",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
